--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,247 @@
+@import url("https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap");
 .container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
+  padding: 0;
+  box-sizing: border-box;
   margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
 }
 
-.title,
-.description {
-  text-align: center;
+.container_header {
+  max-width: 100%;
+  height: auto;
+  max-width: 100%;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.header_photo {
+  background-image: url("/images/tambann_main.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 720px;
+  width: 100%;
 }
 
 .logo {
-  height: 1em;
-  margin-left: 0.5rem;
+  max-width: 200px;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 48px;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+.content_heading {
+}
+
+.content_heading h1 {
+  text-align: center;
+  color: white;
+  font-family: "Prompt", sans-serif;
+  margin-top: 0;
+  font-size: 4rem;
+}
+
+.content_heading h3 {
+  text-align: center;
+  color: white;
+  font-family: "Prompt", sans-serif;
+  font-size: 1.7rem;
+  margin-bottom: -1.2%;
+}
+
+.btn {
+  border-radius: 6px;
+  background-color: #f9c31b;
+  margin-top: -2.1%;
+}
+
+.btn h1 {
+  text-align: center;
+  font-size: 2.7rem;
+  color: black;
+  font-family: "Prompt", sans-serif;
+}
+
+.sponsor_logo {
+  width: 80%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.grid_3items {
+  margin-top: -4%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+  column-gap: 0;
+}
+
+.content_service {
+  width: 100%;
+  height: auto;
+}
+
+.content_service_item {
+  background-color: white;
+  border-radius: 12px;
+  border: 1px solid #e7e7e7;
+  padding: 0px 20px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.content_service_item h5 {
+  font-size: 1.25rem;
+  color: #999999;
+  font-family: "Prompt", sans-serif;
+  margin: 0px 0px;
+  text-transform: uppercase;
+}
+
+.service_logo {
+  max-width: 40%;
+}
+
+.video {
+  justify-self: center;
+}
+
+.grid2 {
+  height: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0;
+  justify-items: center;
+  margin-bottom: 100px;
+}
+
+.content_photo {
+  width: 100%;
+  height: auto;
+}
+
+.grid2_photo1 {
+  
+}
+
+.grid2_photo2 {
+}
+.grid2_photo1 img {
+  max-width: 50%;
+  height: auto;
+}
+.grid2_photo2 img {
+}
+
+.container_blue {
+  height: 746.4px;
+  max-width: 100%;
+  background-color: #37a8e0;
+}
+
+.text_content {
+  padding: 0px 48px 48px;
+  font-family: "Prompt", sans-serif;
+}
+
+.white_tab {
+  width: 100px;
+  height: 100px;
+  transform: rotate(45deg);
+  background-color: #ffffff;
+  position: relative;
+  z-index: 99;
+  top: -5rem;
+  right: -7rem;
+}
+
+.grid_partner {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+  background-color: #37a8e0;
+  grid-gap: 0;
+  margin-bottom: 100px;
+}
+
+.btn_link {
+  background-color: #fecd06;
+}
+
+.grid_contact {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 0;
+  justify-items: center;
+}
+
+.contact_item1 img{
+  width: 540px;
+}
+
+.line_icon img:hover{
+  transform: scale(1.5);
+}
+
+.top_footer{
+  background-color: #439FD8;
+  height: 48px;
+  width: 100%;
+}
+
+.center_footer{
+  background-color: #262C33;
+  height: 249.6px;
+  width: 100%;
+}
+
+.grid_footer{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+}
+
+.grid_footer_item{
+  font-size: 1.25rem;
+  color: #999999;
+  font-family: "Prompt", sans-serif;
+}
+
+.bottom_footer{
+  background-color: #439FD8;
+  height: 56px;
+  width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .logo {
+    width: 150px;
+    height: auto;
+  }
+  .content_heading h1 {
+    font-size: 1.7rem;
+  }
+  .content_heading h3 {
+    font-size: 1.25rem;
+  }
+  .btn h1 {
+    font-size: 1.25rem;
+  }
+  .grid_3items {
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+  .grid2 {
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+  .grid_partner {
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+  .grid_contact{
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+  .contact_item1 img{
+    width: 330px;
   }
 }
